<resources>
    <string name="app_name">Weather data</string>
    <string name="interval">Download interval</string>
    <string name="max_seconds">Max running time</string>
    <string name="download">Download</string>
    <string name="pref_interval">Interval Preference</string>
    <string name="pref_int_summ">The interval which the program will wait before downloading a new datapoint.\nCurrently selected: %s</string>
    <string name="max_seconds_summ">The amount of seconds the download will maximum run for.\nCurrently selected: %s</string>
    <string name="station_name">Station name</string>
    <string name="station_summ">Choose which station to gather weatherdata from.\nCurrently selected: %s</string>
    <string name="deleteButton">deleteButton</string>
    <string name="delete_database">Delete database</string>
    <string name="delete_database_summ">Clicking this will clear all saved database data.</string>
    <string name="action_settings">Settings</string>
    <string name="change_settings">Change preferences</string>
    <string name="change_settings_summ">Change how the application downloads weather data.</string>
    <string name="options_disabled">Options menu disabled while download is running.</string>
    <string name="number_of_datapoints">Datapoints</string>
    <string name="number_of_datapoints_summ">Select how many datapoints the graph will maximum hold</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">End time</string>
    <string name="datapoints_hint">Enter maximum number of datapoints</string>
    <string name="view_graph_while_downloading">You must finish downloading before accessing the view window.</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="epoch_date">1-1-1970</string>
    <string name="time_start">00:00:00</string>
    <string name="show_graph">Show graph</string>
    <string name="end_hour">23:59:00</string>
</resources>
