<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Settings">
        <ListPreference
            android:key="PREF_INTERVAL"
            android:title="@string/pref_interval"
            android:summary="@string/pref_int_summ"
            android:entries="@array/interval_strings"
            android:entryValues="@array/intervals"
            android:defaultValue="1"/>

        <ListPreference
            android:key="PREF_SECONDS"
            android:title="@string/max_seconds"
            android:summary="@string/max_seconds_summ"
            android:entries="@array/seconds_strings"
            android:entryValues="@array/seconds_strings"
            android:defaultValue="120"/>
        <ListPreference
            android:key="PREF_STATION"
            android:title="@string/station_name"
            android:summary="@string/station_summ"
            android:entries="@array/station_strings"
            android:entryValues="@array/stations"
            android:defaultValue="0"
            />

        <EditTextPreference
            android:inputType="number"
            android:key="PREF_DATA_POINTS"
            android:title="@string/number_of_datapoints"
            android:summary="@string/number_of_datapoints_summ"
            android:hint="@string/datapoints_hint"
            android:defaultValue="100"
            />

        <Preference android:title="@string/delete_database"
            android:key="DELETE_BUTTON"
            android:summary="@string/delete_database_summ"/>
    </PreferenceCategory>


</PreferenceScreen>