<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_date_button"
            android:text="@string/start_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:onClick="showDateDialog"/>
        <TextView
            android:id="@+id/start_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epoch_date"
            android:layout_weight="1"/>

        <Button
            android:text="@string/start_time"
            android:id="@+id/start_time_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:onClick="showTimeDialog"/>

        <TextView
            android:id="@+id/start_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_start"
            android:paddingRight="20dp"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/stop_date_button"
            android:text="@string/end_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:onClick="showDateDialog"/>

        <TextView
            android:id="@+id/stop_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epoch_date"
            android:layout_weight="1"/>

        <Button
            android:text="@string/stop_time"
            android:id="@+id/stop_time_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:onClick="showTimeDialog"/>
        <TextView
            android:id="@+id/stop_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_hour"
            android:paddingRight="20dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/fill_graph"
            android:text="@string/show_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="drawGraph"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:layout_gravity="center_horizontal"
                android:entries="@array/station_strings"
                android:layout_weight="1"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner_datatype"
                android:layout_gravity="center_horizontal"
                android:entries="@array/data_types"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
    <com.example.jim.weatherdata.logic.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>